refactor: rework store user
