# entity/user_short.go
@@ -8,26 +8,33 @@ import (
 
 // UserShort data struct
 type UserShort struct {
-	ID               uint      `json:"id" db:"id"`
-	Username         string    `json:"username" db:"username"`
-	Email            string    `json:"email" db:"email"`
-	PasswordHash     string    `json:"-" db:"password_hash"`
-	IsOnline         bool      `json:"is_online" db:"check_online"`
-	IsBot            bool      `json:"is_bot" db:"is_bot"`
-	IsActive         bool      `json:"is_active" db:"is_active"`
-	IsSupporter      bool      `json:"is_supporter" db:"is_supporter"`
-	HasSupported     bool      `json:"has_supported" db:"has_supported"`
-	SupportLevel     int       `json:"support_level" db:"support_level"`
-	PmFriendsOnly    bool      `json:"pm_friends_only" db:"pm_friends_only"`
-	AvatarURL        string    `json:"avatar_url" db:"avatar_url"`
-	CountryCode      string    `json:"country_code" db:"country_code"`
-	DefaultGroup     string    `json:"default_group" db:"default_group"`
-	LastVisit        time.Time `json:"last_visit" db:"last_visit"`
-	JoinDate         time.Time `json:"join_date" db:"created_at"`
-	SupportExpiredAt time.Time `json:"-" db:"support_expired_at"`
+	ID              uint          `json:"id"`
+	IsActive        bool          `json:"is_active"`
+	IsBot           bool          `json:"is_bot"`
+	IsOnline        bool          `json:"is_online"`
+	IsSupporter     bool          `json:"is_supporter"`
+	LastVisit       time.Time     `json:"last_visit"`
+	PmFriendsOnly   bool          `json:"pm_friends_only"`
+	ProfileColour   interface{}   `json:"profile_colour"`
+	Username        string        `json:"username"`
+	Country         Country       `json:"country" gorm:"foreignkey:id"`
+	Cover           Cover         `json:"cover"`
+	CurrentModeRank int           `json:"current_mode_rank"`
+	Groups          []interface{} `json:"groups"`
+	SupportLevel    int           `json:"support_level"`
+	AvatarURL       string        `json:"avatar_url"`
+	CountryCode     string        `json:"country_code"`
+	DefaultGroup    string        `json:"default_group"`
 }
 
 type UserShortField UserShort
 
 func (c UserShortField) Value() (driver.Value, error)  { return utils.ValueOfStruct(c) }
 func (c *UserShortField) Scan(value interface{}) error { return utils.ScanToStruct(c, value) }
+
+type UserAuthBase struct {
+	UserShort
+
+	Email        string `json:"-"`
+	PasswordHash string `json:"-"`
+}
